# gridsearch

./: .gitignore  README.md  main.py  pyproject.toml
20251030_HPopt_library/: README.md  pyproject.toml
20251030_HPopt_library/src/gridsearch/: __init__.py
20251030_HPopt_library/src/gridsearch/data/: hyperparameters_test.json
20251030_HPopt_library/test/: test_1.py
src/gridsearch/: __init__.py
src/gridsearch/data/: hyperparameters_test.json
test/: test_1.py  test_2.py  test_3.py
