[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gridsearch"
version = "1.0"
dependencies = [
  "numpy"
]
description = "grid search for ML, designed to be easy to build into a Pytorch training loop"
readme = "README.md"
authors = [
    { name = "Alex Lozinski", email = "alozinski1@gmail.com" },
]